# cloudmusic-web-player-qt

./: CMakeLists.txt  LICENSE  README.MD  main.cpp
.marscode/: deviceInfo.json
